@@ -20,8 +20,8 @@ import ru.safeai.gateway.auth.service.UserSessionRevocationService;
 import ru.safeai.gateway.common.exception.BadRequestException;
 import ru.safeai.gateway.common.exception.ConflictException;
 import ru.safeai.gateway.common.exception.ForbiddenOperationException;
-import ru.safeai.gateway.common.exception.ResourceNotFoundException;
 import ru.safeai.gateway.common.exception.OrganizationVersionConflictException;
+import ru.safeai.gateway.common.exception.ResourceNotFoundException;
 import ru.safeai.gateway.common.persistence.DatabaseConstraintClassifier;
 import ru.safeai.gateway.common.platform.PlatformProperties;
 import ru.safeai.gateway.common.security.SafeAiUserPrincipal;
@@ -30,14 +30,14 @@ import ru.safeai.gateway.organization.dto.DisableOrganizationRequest;
 import ru.safeai.gateway.organization.dto.EnableOrganizationRequest;
 import ru.safeai.gateway.organization.dto.OrganizationDirectoryResponse;
 import ru.safeai.gateway.organization.dto.OrganizationDisableImpactResponse;
-import ru.safeai.gateway.organization.dto.OrganizationType;
 import ru.safeai.gateway.organization.dto.OrganizationResponse;
+import ru.safeai.gateway.organization.dto.OrganizationType;
 import ru.safeai.gateway.organization.dto.UpdateOrganizationEnabledRequest;
 import ru.safeai.gateway.organization.dto.UpdateOrganizationRequest;
 import ru.safeai.gateway.organization.entity.OrganizationEntity;
 import ru.safeai.gateway.organization.event.OrganizationSecurityStateChangedEvent;
-import ru.safeai.gateway.organization.repository.OrganizationRepository;
 import ru.safeai.gateway.organization.repository.OrganizationImpactQueryRepository;
+import ru.safeai.gateway.organization.repository.OrganizationRepository;
 
 import java.util.List;
 import java.util.Map;
@@ -50,8 +50,17 @@ import java.util.UUID;
 @EnableConfigurationProperties(PlatformProperties.class)
 public class OrganizationService {
 
-    private static final Set<String> ALLOWED_SORT_PROPERTIES =
-            Set.of("createdAt", "name", "enabled", "updatedAt");
+    private static final int MAX_PAGE_SIZE = 100;
+    private static final int MAX_DIRECTORY_LIMIT = 50;
+
+    private static final Set<String>
+            ALLOWED_SORT_PROPERTIES =
+            Set.of(
+                    "createdAt",
+                    "name",
+                    "enabled",
+                    "updatedAt"
+            );
 
     private static final Set<String>
             ORGANIZATION_NAME_UNIQUE_CONSTRAINTS =
@@ -59,43 +68,81 @@ public class OrganizationService {
                     "ux_organizations_name_normalized"
             );
 
-    private final OrganizationRepository organizationRepository;
-    private final OrganizationImpactQueryRepository impactQueryRepository;
-    private final AuditEventService auditEventService;
-    private final ApplicationEventPublisher eventPublisher;
-    private final PlatformProperties platformProperties;
-    private final UserSessionRevocationService userSessionRevocationService;
-    private final EntityManager entityManager;
+    private final OrganizationRepository
+            organizationRepository;
+
+    private final OrganizationImpactQueryRepository
+            impactQueryRepository;
+
+    private final AuditEventService
+            auditEventService;
+
+    private final ApplicationEventPublisher
+            eventPublisher;
+
+    private final PlatformProperties
+            platformProperties;
+
+    private final UserSessionRevocationService
+            userSessionRevocationService;
+
+    private final EntityManager
+            entityManager;
 
     @Transactional
     public OrganizationResponse create(
             CreateOrganizationRequest request,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(request, "request не должен быть null");
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
+        Objects.requireNonNull(
+                request,
+                "request не должен быть null"
+        );
         requireSuperAdmin(currentUser);
 
         String canonicalName =
-                OrganizationNameNormalizer.canonicalize(request.name());
-        String normalizedName =
-                OrganizationNameNormalizer.normalize(canonicalName);
+                OrganizationNameNormalizer.canonicalize(
+                        request.name()
+                );
 
-        if (organizationRepository.existsByNormalizedName(normalizedName)) {
-            throw duplicateOrganizationName(canonicalName);
+        String normalizedName =
+                OrganizationNameNormalizer.normalize(
+                        canonicalName
+                );
+
+        if (
+                organizationRepository
+                        .existsByNormalizedName(
+                                normalizedName
+                        )
+        ) {
+            throw duplicateOrganizationName(
+                    canonicalName
+            );
         }
 
-        OrganizationEntity entity = new OrganizationEntity();
+        OrganizationEntity entity =
+                new OrganizationEntity();
+
         entity.setName(canonicalName);
         entity.setEnabled(true);
         entity.setAuthVersion(0L);
 
         OrganizationEntity saved;
+
         try {
             saved = saveAndRefresh(entity);
-        } catch (DataIntegrityViolationException exception) {
-            if (isOrganizationNameUniqueViolation(exception)) {
-                throw duplicateOrganizationName(canonicalName);
+        } catch (
+                DataIntegrityViolationException exception
+        ) {
+            if (
+                    isOrganizationNameUniqueViolation(
+                            exception
+                    )
+            ) {
+                throw duplicateOrganizationName(
+                        canonicalName
+                );
             }
 
             throw exception;
@@ -106,9 +153,14 @@ public class OrganizationService {
                 saved.getId(),
                 AuditEventType.ORGANIZATION_CREATED,
                 Map.of(
-                        "organizationId", saved.getId().toString(),
-                        "organizationName", saved.getName(),
-                        "authVersion", saved.getAuthVersion()
+                        "organizationId",
+                        saved.getId().toString(),
+                        "organizationName",
+                        saved.getName(),
+                        "authVersion",
+                        saved.getAuthVersion(),
+                        "version",
+                        saved.getVersion()
                 )
         );
 
@@ -120,10 +172,17 @@ public class OrganizationService {
             SafeAiUserPrincipal currentUser,
             Pageable pageable
     ) {
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
-        Objects.requireNonNull(pageable, "pageable не должен быть null");
+        Objects.requireNonNull(
+                currentUser,
+                "currentUser не должен быть null"
+        );
+        Objects.requireNonNull(
+                pageable,
+                "pageable не должен быть null"
+        );
 
-        Pageable stablePageable = normalizePageable(pageable);
+        Pageable stablePageable =
+                normalizePageable(pageable);
 
         if (isSuperAdmin(currentUser)) {
             return organizationRepository
@@ -131,41 +190,63 @@ public class OrganizationService {
                     .map(this::toResponse);
         }
 
-        if (stablePageable.getOffset() > 0) {
-            return new PageImpl<>(List.of(), stablePageable, 1);
+        if (stablePageable.getOffset() > 0L) {
+            return new PageImpl<>(
+                    List.of(),
+                    stablePageable,
+                    1L
+            );
         }
 
-        OrganizationEntity organization = organizationRepository
-                .findById(currentUser.getOrganizationId())
-                .orElseThrow(() -> organizationNotFound(
-                        currentUser.getOrganizationId()
-                ));
+        OrganizationEntity organization =
+                organizationRepository
+                        .findById(
+                                currentUser
+                                        .getOrganizationId()
+                        )
+                        .orElseThrow(() ->
+                                organizationNotFound(
+                                        currentUser
+                                                .getOrganizationId()
+                                )
+                        );
 
         return new PageImpl<>(
-                List.of(toResponse(organization)),
+                List.of(
+                        toResponse(organization)
+                ),
                 stablePageable,
-                1
+                1L
         );
     }
 
-
     @Transactional(readOnly = true)
-    public List<OrganizationDirectoryResponse> findDirectory(
+    public List<OrganizationDirectoryResponse>
+    findDirectory(
             String query,
             int limit,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
         requireSuperAdmin(currentUser);
 
-        String normalizedQuery = query == null ? "" : query.trim();
+        String normalizedQuery =
+                query == null
+                        ? ""
+                        : query.trim();
+
         if (normalizedQuery.length() > 255) {
             throw new BadRequestException(
-                    "Поисковый запрос не должен превышать 255 символов"
+                    "Поисковый запрос не должен превышать "
+                            + "255 символов"
             );
         }
 
-        int safeLimit = Math.min(Math.max(limit, 1), 50);
+        int safeLimit = Math.clamp(
+                limit,
+                1,
+                MAX_DIRECTORY_LIMIT
+        );
+
         Pageable pageable = PageRequest.of(
                 0,
                 safeLimit,
@@ -175,38 +256,60 @@ public class OrganizationService {
                 )
         );
 
-        UUID exactId = parseUuidOrNull(normalizedQuery);
+        UUID exactId =
+                parseUuidOrNull(
+                        normalizedQuery
+                );
+
         if (exactId != null) {
-            return organizationRepository.findById(exactId)
-                    .map(this::toDirectoryResponse)
+            return organizationRepository
+                    .findById(exactId)
+                    .map(
+                            this::toDirectoryResponse
+                    )
                     .map(List::of)
                     .orElseGet(List::of);
         }
 
-        Page<OrganizationEntity> page = normalizedQuery.isEmpty()
-                ? organizationRepository.findAll(pageable)
-                : organizationRepository.searchDirectoryByName(
-                        normalizedQuery,
-                        pageable
-                );
+        Page<OrganizationEntity> page =
+                normalizedQuery.isEmpty()
+                        ? organizationRepository
+                        .findAll(pageable)
+                        : organizationRepository
+                        .searchDirectoryByName(
+                                normalizedQuery,
+                                pageable
+                        );
 
-        return page.getContent().stream()
-                .map(this::toDirectoryResponse)
+        return page.getContent()
+                .stream()
+                .map(
+                        this::toDirectoryResponse
+                )
                 .toList();
     }
 
     @Transactional(readOnly = true)
-    public OrganizationResponse findCurrentOrganization(
+    public OrganizationResponse
+    findCurrentOrganization(
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
+        Objects.requireNonNull(
+                currentUser,
+                "currentUser не должен быть null"
+        );
+
+        UUID organizationId =
+                currentUser.getOrganizationId();
 
         return organizationRepository
-                .findById(currentUser.getOrganizationId())
+                .findById(organizationId)
                 .map(this::toResponse)
-                .orElseThrow(() -> organizationNotFound(
-                        currentUser.getOrganizationId()
-                ));
+                .orElseThrow(() ->
+                        organizationNotFound(
+                                organizationId
+                        )
+                );
     }
 
     @Transactional(readOnly = true)
@@ -214,108 +317,50 @@ public class OrganizationService {
             UUID id,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(id, "id не должен быть null");
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
+        Objects.requireNonNull(
+                id,
+                "id не должен быть null"
+        );
+        Objects.requireNonNull(
+                currentUser,
+                "currentUser не должен быть null"
+        );
 
-        if (!isSuperAdmin(currentUser)
-                && !currentUser.getOrganizationId().equals(id)) {
+        if (
+                !isSuperAdmin(currentUser)
+                        && !currentUser
+                        .getOrganizationId()
+                        .equals(id)
+        ) {
+            /*
+             * 404 вместо 403 не раскрывает существование
+             * чужой tenant organization.
+             */
             throw organizationNotFound(id);
         }
 
-        return organizationRepository.findById(id)
+        return organizationRepository
+                .findById(id)
                 .map(this::toResponse)
-                .orElseThrow(() -> organizationNotFound(id));
-    }
-
-    @Transactional
-    public OrganizationResponse updateName(
-            UUID id,
-            UpdateOrganizationRequest request,
-            SafeAiUserPrincipal currentUser
-    ) {
-        Objects.requireNonNull(request, "request не должен быть null");
-
-        OrganizationEntity entity =
-                findMutableOrganizationForSuperAdmin(id, currentUser);
-
-        requireExpectedVersion(entity, request.expectedVersion());
-
-        String canonicalName =
-                OrganizationNameNormalizer.canonicalize(request.name());
-        String normalizedName =
-                OrganizationNameNormalizer.normalize(canonicalName);
-
-        if (entity.getName().equals(canonicalName)) {
-            return toResponse(entity);
-        }
-
-        if (organizationRepository.existsByNormalizedNameAndIdNot(
-                normalizedName,
-                id
-        )) {
-            throw duplicateOrganizationName(canonicalName);
-        }
-
-        String oldName = entity.getName();
-        entity.setName(canonicalName);
-
-        OrganizationEntity saved;
-        try {
-            saved = saveAndRefresh(entity);
-        } catch (DataIntegrityViolationException exception) {
-            if (isOrganizationNameUniqueViolation(exception)) {
-                throw duplicateOrganizationName(canonicalName);
-            }
-
-            throw exception;
-        }
-
-        auditEventService.record(
-                currentUser,
-                saved.getId(),
-                AuditEventType.ORGANIZATION_NAME_CHANGED,
-                Map.of(
-                        "organizationId", saved.getId().toString(),
-                        "oldName", oldName,
-                        "newName", saved.getName()
-                )
-        );
-
-        return toResponse(saved);
-    }
-
-
-    @Transactional
-    public OrganizationResponse updateEnabled(
-            UUID id,
-            UpdateOrganizationEnabledRequest request,
-            SafeAiUserPrincipal currentUser
-    ) {
-        Objects.requireNonNull(request, "request не должен быть null");
-
-        OrganizationEntity entity =
-                findMutableOrganizationForSuperAdmin(id, currentUser);
-
-        requireExpectedVersion(entity, request.expectedVersion());
-
-        return changeEnabled(
-                entity,
-                Boolean.TRUE.equals(request.enabled()),
-                currentUser
-        );
+                .orElseThrow(() ->
+                        organizationNotFound(id)
+                );
     }
 
     @Transactional(readOnly = true)
-    public OrganizationDisableImpactResponse getDisableImpact(
+    public OrganizationDisableImpactResponse
+    getDisableImpact(
             UUID id,
             SafeAiUserPrincipal currentUser
     ) {
-        OrganizationEntity entity = findMutableOrganizationSnapshot(
-                id,
-                currentUser
-        );
+        OrganizationEntity entity =
+                findMutableOrganizationSnapshot(
+                        id,
+                        currentUser
+                );
 
-        OrganizationImpactQueryRepository.ImpactSnapshot impact =
+        OrganizationImpactQueryRepository
+                .ImpactSnapshot impact =
                 impactQueryRepository.load(id);
 
         return new OrganizationDisableImpactResponse(
@@ -329,29 +374,182 @@ public class OrganizationService {
     }
 
     @Transactional
+    public OrganizationResponse updateName(
+            UUID id,
+            UpdateOrganizationRequest request,
+            SafeAiUserPrincipal currentUser
+    ) {
+        Objects.requireNonNull(
+                request,
+                "request не должен быть null"
+        );
+
+        OrganizationEntity entity =
+                findMutableOrganizationForUpdate(
+                        id,
+                        currentUser
+                );
+
+        requireExpectedVersion(
+                entity,
+                request.expectedVersion()
+        );
+
+        String canonicalName =
+                OrganizationNameNormalizer.canonicalize(
+                        request.name()
+                );
+
+        if (
+                entity.getName()
+                        .equals(canonicalName)
+        ) {
+            return toResponse(entity);
+        }
+
+        String normalizedName =
+                OrganizationNameNormalizer.normalize(
+                        canonicalName
+                );
+
+        if (
+                organizationRepository
+                        .existsByNormalizedNameAndIdNot(
+                                normalizedName,
+                                id
+                        )
+        ) {
+            throw duplicateOrganizationName(
+                    canonicalName
+            );
+        }
+
+        String oldName =
+                entity.getName();
+
+        entity.setName(canonicalName);
+
+        OrganizationEntity saved;
+
+        try {
+            saved = saveAndRefresh(entity);
+        } catch (
+                DataIntegrityViolationException exception
+        ) {
+            if (
+                    isOrganizationNameUniqueViolation(
+                            exception
+                    )
+            ) {
+                throw duplicateOrganizationName(
+                        canonicalName
+                );
+            }
+
+            throw exception;
+        }
+
+        auditEventService.record(
+                currentUser,
+                saved.getId(),
+                AuditEventType.ORGANIZATION_NAME_CHANGED,
+                Map.of(
+                        "organizationId",
+                        saved.getId().toString(),
+                        "oldName",
+                        oldName,
+                        "newName",
+                        saved.getName(),
+                        "version",
+                        saved.getVersion()
+                )
+        );
+
+        return toResponse(saved);
+    }
+
+    /**
+     * Совместимость со старым клиентом.
+     *
+     * @deprecated Новые клиенты должны использовать
+     * {@link #disable(UUID, DisableOrganizationRequest, SafeAiUserPrincipal)}
+     * или
+     * {@link #enable(UUID, EnableOrganizationRequest, SafeAiUserPrincipal)}.
+     */
+    @Deprecated
+    @Transactional
+    public OrganizationResponse updateEnabled(
+            UUID id,
+            UpdateOrganizationEnabledRequest request,
+            SafeAiUserPrincipal currentUser
+    ) {
+        Objects.requireNonNull(
+                request,
+                "request не должен быть null"
+        );
+
+        OrganizationEntity entity =
+                findMutableOrganizationForUpdate(
+                        id,
+                        currentUser
+                );
+
+        requireExpectedVersion(
+                entity,
+                request.expectedVersion()
+        );
+
+        return changeEnabled(
+                entity,
+                Boolean.TRUE.equals(
+                        request.enabled()
+                ),
+                currentUser
+        );
+    }
+
+    @Transactional
     public OrganizationResponse disable(
             UUID id,
             DisableOrganizationRequest request,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(request, "request не должен быть null");
-
-        OrganizationEntity entity =
-                findMutableOrganizationForSuperAdmin(id, currentUser);
-
-        requireExpectedVersion(entity, request.expectedVersion());
-
-        String confirmationName = OrganizationNameNormalizer.canonicalize(
-                request.confirmationName()
+        Objects.requireNonNull(
+                request,
+                "request не должен быть null"
         );
 
-        if (!entity.getName().equals(confirmationName)) {
+        OrganizationEntity entity =
+                findMutableOrganizationForUpdate(
+                        id,
+                        currentUser
+                );
+
+        requireExpectedVersion(
+                entity,
+                request.expectedVersion()
+        );
+
+        String confirmationName =
+                OrganizationNameNormalizer.canonicalize(
+                        request.confirmationName()
+                );
+
+        if (
+                !entity.getName()
+                        .equals(confirmationName)
+        ) {
             throw new BadRequestException(
-                    "Название организации для подтверждения не совпадает"
+                    "Название организации для подтверждения "
+                            + "не совпадает"
             );
         }
 
-        return changeEnabled(entity, false, currentUser);
+        return changeEnabled(
+                entity,
+                false,
+                currentUser
+        );
     }
 
     @Transactional
@@ -360,14 +558,27 @@ public class OrganizationService {
             EnableOrganizationRequest request,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(request, "request не должен быть null");
+        Objects.requireNonNull(
+                request,
+                "request не должен быть null"
+        );
 
         OrganizationEntity entity =
-                findMutableOrganizationForSuperAdmin(id, currentUser);
+                findMutableOrganizationForUpdate(
+                        id,
+                        currentUser
+                );
 
-        requireExpectedVersion(entity, request.expectedVersion());
+        requireExpectedVersion(
+                entity,
+                request.expectedVersion()
+        );
 
-        return changeEnabled(entity, true, currentUser);
+        return changeEnabled(
+                entity,
+                true,
+                currentUser
+        );
     }
 
     private OrganizationResponse changeEnabled(
@@ -375,27 +586,40 @@ public class OrganizationService {
             boolean newEnabled,
             SafeAiUserPrincipal currentUser
     ) {
-        boolean oldEnabled = entity.isEnabled();
+        boolean oldEnabled =
+                entity.isEnabled();
 
         if (oldEnabled == newEnabled) {
             return toResponse(entity);
         }
 
-        long oldAuthVersion = entity.getAuthVersion();
+        long oldAuthVersion =
+                entity.getAuthVersion();
+
         entity.setEnabled(newEnabled);
 
         if (!newEnabled) {
-            entity.setAuthVersion(Math.addExact(oldAuthVersion, 1L));
+            entity.setAuthVersion(
+                    Math.addExact(
+                            oldAuthVersion,
+                            1L
+                    )
+            );
         }
 
-        OrganizationEntity saved = saveAndRefresh(entity);
+        OrganizationEntity saved =
+                saveAndRefresh(entity);
 
         boolean sessionsRevoked = false;
+
         if (!newEnabled) {
-            userSessionRevocationService.revokeAllForOrganization(
-                    saved.getId(),
-                    RefreshTokenRevocationReason.ORGANIZATION_DISABLED
-            );
+            userSessionRevocationService
+                    .revokeAllForOrganization(
+                            saved.getId(),
+                            RefreshTokenRevocationReason
+                                    .ORGANIZATION_DISABLED
+                    );
+
             sessionsRevoked = true;
         }
 
@@ -409,71 +633,151 @@ public class OrganizationService {
         auditEventService.record(
                 currentUser,
                 saved.getId(),
-                AuditEventType.ORGANIZATION_ENABLED_CHANGED,
+                AuditEventType
+                        .ORGANIZATION_ENABLED_CHANGED,
                 Map.of(
-                        "organizationId", saved.getId().toString(),
-                        "organizationName", saved.getName(),
-                        "oldEnabled", oldEnabled,
-                        "newEnabled", saved.isEnabled(),
-                        "oldAuthVersion", oldAuthVersion,
-                        "newAuthVersion", saved.getAuthVersion(),
-                        "sessionsRevoked", sessionsRevoked,
-                        "requiresRelogin", !newEnabled
+                        "organizationId",
+                        saved.getId().toString(),
+                        "organizationName",
+                        saved.getName(),
+                        "oldEnabled",
+                        oldEnabled,
+                        "newEnabled",
+                        saved.isEnabled(),
+                        "oldAuthVersion",
+                        oldAuthVersion,
+                        "newAuthVersion",
+                        saved.getAuthVersion(),
+                        "sessionsRevoked",
+                        sessionsRevoked,
+                        "requiresRelogin",
+                        !newEnabled,
+                        "version",
+                        saved.getVersion()
                 )
         );
 
         return toResponse(saved);
     }
 
-
-    private OrganizationEntity findMutableOrganizationSnapshot(
+    private OrganizationEntity
+    findMutableOrganizationSnapshot(
             UUID id,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(id, "id не должен быть null");
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
+        requireMutableOrganizationRequest(
+                id,
+                currentUser
+        );
 
-        requireSuperAdmin(currentUser);
-        rejectPlatformOrganizationMutation(id);
-
-        return organizationRepository.findById(id)
-                .orElseThrow(() -> organizationNotFound(id));
+        return organizationRepository
+                .findById(id)
+                .orElseThrow(() ->
+                        organizationNotFound(id)
+                );
     }
 
-    private OrganizationEntity findMutableOrganizationForSuperAdmin(
+    private OrganizationEntity
+    findMutableOrganizationForUpdate(
             UUID id,
             SafeAiUserPrincipal currentUser
     ) {
-        Objects.requireNonNull(id, "id не должен быть null");
-        Objects.requireNonNull(currentUser, "currentUser не должен быть null");
+        requireMutableOrganizationRequest(
+                id,
+                currentUser
+        );
+
+        return organizationRepository
+                .findByIdForSecurityUpdate(id)
+                .orElseThrow(() ->
+                        organizationNotFound(id)
+                );
+    }
+
+    private void requireMutableOrganizationRequest(
+            UUID id,
+            SafeAiUserPrincipal currentUser
+    ) {
+        Objects.requireNonNull(
+                id,
+                "id не должен быть null"
+        );
 
         requireSuperAdmin(currentUser);
         rejectPlatformOrganizationMutation(id);
-
-        return organizationRepository.findByIdForSecurityUpdate(id)
-                .orElseThrow(() -> organizationNotFound(id));
     }
 
     private OrganizationEntity saveAndRefresh(
             OrganizationEntity organization
     ) {
         OrganizationEntity saved =
-                organizationRepository.saveAndFlush(organization);
+                organizationRepository
+                        .saveAndFlush(
+                                organization
+                        );
+
         entityManager.refresh(saved);
+
         return saved;
     }
 
-    private Pageable normalizePageable(Pageable pageable) {
+    private Pageable normalizePageable(
+            Pageable pageable
+    ) {
+        if (
+                pageable.getPageSize() < 1
+                        || pageable.getPageSize()
+                        > MAX_PAGE_SIZE
+        ) {
+            throw new BadRequestException(
+                    "Размер страницы должен быть от 1 до "
+                            + MAX_PAGE_SIZE
+            );
+        }
+
         validatePageableSort(pageable);
 
-        Sort sort = pageable.getSort().isUnsorted()
-                ? Sort.by(Sort.Order.desc("createdAt"))
-                : pageable.getSort();
+        Sort sort =
+                pageable.getSort()
+                        .isUnsorted()
+                        ? Sort.by(
+                        Sort.Order.desc(
+                                "createdAt"
+                        )
+                )
+                        : pageable.getSort();
 
-        if (sort.stream().noneMatch(
-                order -> "id".equals(order.getProperty())
-        )) {
-            sort = sort.and(Sort.by(Sort.Order.desc("id")));
+        if (
+                sort.stream()
+                        .noneMatch(order ->
+                                "id".equals(
+                                        order.getProperty()
+                                )
+                        )
+        ) {
+            Sort.Direction tieBreakerDirection =
+                    sort.stream()
+                            .reduce(
+                                    (
+                                            first,
+                                            second
+                                    ) -> second
+                            )
+                            .map(
+                                    Sort.Order::getDirection
+                            )
+                            .orElse(
+                                    Sort.Direction.DESC
+                            );
+
+            sort = sort.and(
+                    Sort.by(
+                            new Sort.Order(
+                                    tieBreakerDirection,
+                                    "id"
+                            )
+                    )
+            );
         }
 
         return PageRequest.of(
@@ -483,9 +787,19 @@ public class OrganizationService {
         );
     }
 
-    private void validatePageableSort(Pageable pageable) {
-        for (Sort.Order order : pageable.getSort()) {
-            if (!ALLOWED_SORT_PROPERTIES.contains(order.getProperty())) {
+    private void validatePageableSort(
+            Pageable pageable
+    ) {
+        for (
+                Sort.Order order
+                : pageable.getSort()
+        ) {
+            if (
+                    !ALLOWED_SORT_PROPERTIES
+                            .contains(
+                                    order.getProperty()
+                            )
+            ) {
                 throw new BadRequestException(
                         "Сортировка по полю не разрешена: "
                                 + order.getProperty()
@@ -497,9 +811,10 @@ public class OrganizationService {
     private OrganizationResponse toResponse(
             OrganizationEntity organization
     ) {
-        boolean protectedOrganization = isPlatformOrganization(
-                organization.getId()
-        );
+        boolean protectedOrganization =
+                isPlatformOrganization(
+                        organization.getId()
+                );
 
         return new OrganizationResponse(
                 organization.getId(),
@@ -515,13 +830,14 @@ public class OrganizationService {
         );
     }
 
-
-    private OrganizationDirectoryResponse toDirectoryResponse(
+    private OrganizationDirectoryResponse
+    toDirectoryResponse(
             OrganizationEntity organization
     ) {
-        boolean protectedOrganization = isPlatformOrganization(
-                organization.getId()
-        );
+        boolean protectedOrganization =
+                isPlatformOrganization(
+                        organization.getId()
+                );
 
         return new OrganizationDirectoryResponse(
                 organization.getId(),
@@ -539,13 +855,20 @@ public class OrganizationService {
             OrganizationEntity organization,
             Long expectedVersion
     ) {
-        if (expectedVersion == null || expectedVersion < 0L) {
+        if (
+                expectedVersion == null
+                        || expectedVersion < 0L
+        ) {
             throw new BadRequestException(
-                    "expectedVersion должен быть неотрицательным числом"
+                    "expectedVersion должен быть "
+                            + "неотрицательным числом"
             );
         }
 
-        if (organization.getVersion() != expectedVersion) {
+        if (
+                organization.getVersion()
+                        != expectedVersion
+        ) {
             throw new OrganizationVersionConflictException(
                     organization.getId(),
                     expectedVersion,
@@ -554,67 +877,111 @@ public class OrganizationService {
         }
     }
 
-    private boolean isPlatformOrganization(UUID organizationId) {
-        return platformProperties.organizationId().equals(organizationId);
+    private boolean isPlatformOrganization(
+            UUID organizationId
+    ) {
+        return platformProperties
+                .organizationId()
+                .equals(organizationId);
     }
 
-    private UUID parseUuidOrNull(String value) {
-        if (value == null || value.isBlank()) {
+    private UUID parseUuidOrNull(
+            String value
+    ) {
+        if (
+                value == null
+                        || value.isBlank()
+        ) {
             return null;
         }
 
         try {
             return UUID.fromString(value);
-        } catch (IllegalArgumentException exception) {
+        } catch (
+                IllegalArgumentException exception
+        ) {
             return null;
         }
     }
 
-    private boolean isSuperAdmin(SafeAiUserPrincipal currentUser) {
-        return currentUser.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .anyMatch("ROLE_SUPER_ADMIN"::equals);
+    private boolean isSuperAdmin(
+            SafeAiUserPrincipal currentUser
+    ) {
+        return currentUser
+                .getAuthorities()
+                .stream()
+                .map(
+                        GrantedAuthority::getAuthority
+                )
+                .anyMatch(
+                        "ROLE_SUPER_ADMIN"::equals
+                );
     }
 
-    private void requireSuperAdmin(SafeAiUserPrincipal currentUser) {
+    private void requireSuperAdmin(
+            SafeAiUserPrincipal currentUser
+    ) {
+        Objects.requireNonNull(
+                currentUser,
+                "currentUser не должен быть null"
+        );
+
         if (!isSuperAdmin(currentUser)) {
             throw new ForbiddenOperationException(
-                    "Только SUPER_ADMIN может управлять организациями"
+                    "Только SUPER_ADMIN может "
+                            + "управлять организациями"
             );
         }
     }
 
-    private void rejectPlatformOrganizationMutation(UUID organizationId) {
-        if (platformProperties.organizationId().equals(organizationId)) {
+    private void rejectPlatformOrganizationMutation(
+            UUID organizationId
+    ) {
+        if (
+                isPlatformOrganization(
+                        organizationId
+                )
+        ) {
             throw new ForbiddenOperationException(
-                    "Платформенную организацию нельзя изменять через "
-                            + "обычный organization-management endpoint"
+                    "Платформенную организацию нельзя "
+                            + "изменять через обычный "
+                            + "organization-management endpoint"
             );
         }
     }
 
-    private boolean isOrganizationNameUniqueViolation(
+    private boolean
+    isOrganizationNameUniqueViolation(
             Throwable exception
     ) {
-        return DatabaseConstraintClassifier.isUniqueViolation(
-                exception,
-                ORGANIZATION_NAME_UNIQUE_CONSTRAINTS
-                        .toArray(String[]::new)
-        );
+        return DatabaseConstraintClassifier
+                .isUniqueViolation(
+                        exception,
+                        ORGANIZATION_NAME_UNIQUE_CONSTRAINTS
+                                .toArray(
+                                        String[]::new
+                                )
+                );
     }
 
-    private ConflictException duplicateOrganizationName(
+    private ConflictException
+    duplicateOrganizationName(
             String name
     ) {
         return new ConflictException(
-                "Организация с таким названием уже существует: "
+                "Организация с таким названием "
+                        + "уже существует: "
                         + name
         );
     }
 
-    private ResourceNotFoundException organizationNotFound(UUID id) {
+    private ResourceNotFoundException
+    organizationNotFound(
+            UUID id
+    ) {
         return new ResourceNotFoundException(
-                "Организация не найдена: " + id
+                "Организация не найдена: "
+                        + id
         );
     }
 }
